[package]
name = "gwas-summary-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.30"
itertools = "0.13.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
